<resources>
    <string name="app_name">VkCupFinal</string>
    <string name="podcast_reaction">Реакции</string>
    <integer name="com_vk_sdk_AppId">7924627</integer>
    <string name="speed_foramt">%dx</string>

    <string name="funny">Смешно!</string>
    <string name="like">Отлично</string>
    <string name="dislike">Так себе</string>
    <string name="angry">Злюсь!</string>
    <string name="sad">Грустно</string>
    <string name="confused">Радуюсь</string>
    <string name="money">Опять реклама</string>
    <string name="shit">Какой-то бред</string>
    <string name="choose_title">Укажите RSS и JSON ссылки</string>
    <string name="choose_rss_hint">Введите RSS ссылку</string>
    <string name="choose_json_hint">Выберите json файл</string>
    <string name="save">Сохранить</string>
    <string name="choose_permission_external_error">Для этой задачи нужны разрешения на запись/чтения из стореджа</string>
    <string name="default_rss">https://vk.com/podcasts-147415323_-1000000.rss</string>
    <string name="default_json">https://api.facebook.com/method/fql.query?format=json</string>
    <string name="default_time">0:00</string>
    <string name="choose_podcast_json_title">Выберите файл json</string>
    <string name="analytic_title">Статистика</string>
    <string name="analytic_reactions">Реакции</string>
    <string name="analytic_reaction_type">Виды реакций</string>
</resources>