<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tvTitle"
                style="@style/BaseDemiBold.Primary.21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:text="@string/analytic_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/margin_12"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="@id/tvTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTitle" />

            <View
                android:id="@+id/viewTitleLine"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_14"
                android:background="@color/primary_20"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <TextView
                android:id="@+id/tvReactions"
                style="@style/BaseDemiBold.Primary.17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_12"
                android:text="@string/analytic_reactions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewTitleLine" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/reactionChart"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintTop_toBottomOf="@id/tvReactions" />

            <View
                android:id="@+id/viewReactionLine"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_24"
                android:background="@color/primary_20"
                app:layout_constraintTop_toBottomOf="@id/reactionChart" />

            <TextView
                android:id="@+id/tvReactionType"
                style="@style/BaseDemiBold.Primary.17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_12"
                android:text="@string/analytic_reaction_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewReactionLine" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>